option java_outer_classname = "LCSubscribeRequest";
option java_package = "com.navinfo.opentsp.platform.location.protocol.platform";

message SubscribeRequest{
	repeated	int64	terminalIdentify	=1;
}
